something i should do

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 This file is some program what is about transmission files with socket.
+Now, I want to add some other function to make it work like cs mode.
