--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 This file is some program what is about transmission files with socket.
 Now, I want to add some other function to make it work like cs mode.
+/**************&&&&&******V1.0******&&&&&***************/
+2012-07-30 Morning
+/**************&&&&&&&&&&&****&&&&&&&&&&&***************/
