--- a/README
+++ b/README
@@ -24,3 +24,11 @@
 *  print out at the server.So, I fixed it at the follwing works. *
 *                                                                *
 /******************&&&&&&&&&&&&****&&&&&&&&&&&&*******************/
+*                                                                *
+*                                                                *
+*                                                                *
+/*******************&&&&&***20120808*****&&&&&********************/
+*                                                                *
+*                 Yestoday, i reinstall my sytem.                *
+*                                                                *
+/******************&&&&&&&&&&&&****&&&&&&&&&&&&*******************/
