--- a/README
+++ b/README
@@ -32,3 +32,14 @@
 *                 Yestoday, i reinstall my sytem.                *
 *                                                                *
 /******************&&&&&&&&&&&&****&&&&&&&&&&&&*******************/
+*                                                                *
+*                                                                * 
+*                                                                *
+/*******************&&&&&******V1.2******&&&&&********************/
+*                                                                *
+*                     2012-08-11 Morning                         *
+*  v1.2 i add the get time function that can display current     *
+*  time when we communicate with other people.                   *
+*  The following, i want to add the mysql to storage the info.   *
+*                                                                *
+/******************&&&&&&&&&&&&****&&&&&&&&&&&&*******************/
